--- a/Getix-Admin-Api/Getix-Admin-Api.csproj
+++ b/Getix-Admin-Api/Getix-Admin-Api.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LookUpController.cs" />
     <Compile Include="Controllers\ProjectConfigsController.cs" />
     <Compile Include="Controllers\ProjectsController.cs" />
     <Compile Include="Controllers\TablesController.cs" />
@@ -192,6 +193,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>GetixAdmin.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\LookUpData.cs" />
     <Compile Include="Models\Project.cs">
       <DependentUpon>GetixAdmin.tt</DependentUpon>
     </Compile>
