--- a/Getix-Admin-Api/Getix-Admin-Api.csproj
+++ b/Getix-Admin-Api/Getix-Admin-Api.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\ConfigsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LookUpController.cs" />
     <Compile Include="Controllers\ProjectConfigsController.cs" />
@@ -177,7 +178,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Config.cs">
+      <DependentUpon>GetixAdmin.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\ConfigModel.cs" />
+    <Compile Include="Models\Configs.cs" />
     <Compile Include="Models\GetixAdmin.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -200,14 +205,17 @@
     <Compile Include="Models\ProjectColumn.cs">
       <DependentUpon>GetixAdmin.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\ProjectConfig.cs">
-      <DependentUpon>GetixAdmin.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\Projects.cs" />
     <Compile Include="Models\ProjectTable.cs">
       <DependentUpon>GetixAdmin.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Project_Config.cs">
+      <DependentUpon>GetixAdmin.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Table.cs" />
+    <Compile Include="Models\User.cs">
+      <DependentUpon>GetixAdmin.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
